# deterministic_ai_code

./: .claudeignore  .coverage  .env.example  CLAUDE.md  guardrails.md  pyproject.toml  requirements.txt  testing.md
.claude/: settings.json
.claude/rules/: context-management.md  determinism.md  logging.md
.claude/skills/: compact.md  log-audit.md  observe.md
.github/workflows/: determinism.yml
docs/: architecture.md  index.md
docs/components/: agent.md  dependency_resolver.md  intent_normalizer.md  retry_orchestrator.md  schema_parser.md  spec_validator.md
ocean_documentation/: getting-started.md  images.md
ocean_documentation/components/: ambiguity_gate.md  canonical_classifier.md  claude_api_adapter.md  consumers.md  contracts.md  drift_detector.md  multi_intent_splitter.md  project_spec.md  template_binder.md
prompts/: .features.md.swp  base_project_prompt.md  complete_prompt.md  how_to_run.md  system_architecture.md
specs/: INDEX.md
specs/components/: ambiguity_gate.yaml  canonical_classifier.yaml  claude_api_adapter.yaml  drift_detector.yaml  intent_normalizer.yaml  retry_orchestrator.yaml  (+3 more)
src/: main.py
tests/: test_agent.py  test_ambiguity_gate.py  test_canonical_classifier.py  test_claude_api_adapter.py  test_consumers.py  test_contracts.py  test_coverage_gaps.py  test_dependency_resolver.py  test_determinism_regression.py  test_drift_detector.py  test_intent_normalizer.py  test_main.py  test_multi_intent_splitter.py  test_project_spec.py  test_retry_orchestrator.py  test_schema_parser.py  test_spec_validator.py  test_template_binder.py
(+46 files in other folders)
